removed mapping with "model mapper" removed logic from AuthController Added new AuthService for authorization and registration process